[gd_scene load_steps=4 format=3 uid="uid://drwis8yrw78ss"]

[ext_resource type="Script" uid="uid://cocki2sy0tgyu" path="res://player/player_profile.gd" id="1_5h0j8"]
[ext_resource type="FontFile" uid="uid://cv1f6qm6dc3m0" path="res://resources/Piacevoli.ttf" id="1_g5rnr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5h0j8"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.0962047, 0.0962048, 0.0962046, 1)

[node name="PlayerProfile" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5h0j8")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="ProfilePanel" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_5h0j8")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/ProfilePanel"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="Control" type="Control" parent="MarginContainer/ProfilePanel/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/ProfilePanel/MarginContainer/Control"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 1

[node name="PlayerNameLabel" type="RichTextLabel" parent="MarginContainer/ProfilePanel/MarginContainer/Control/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("1_g5rnr")
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
fit_content = true
autowrap_mode = 0

[node name="PlayCountLabel" type="RichTextLabel" parent="MarginContainer/ProfilePanel/MarginContainer/Control/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
bbcode_enabled = true
fit_content = true
autowrap_mode = 0

[node name="CloseProfileButton" type="Button" parent="MarginContainer/ProfilePanel/MarginContainer/Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -4.0
offset_bottom = 4.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 8
text = "X"
